--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "bizcharts": "^3.1.3-beta.1",
     "bizcharts-plugin-slider": "^2.0.1",
     "classnames": "^2.2.5",
+    "draft-js": "^0.10.5",
     "dva": "^2.1.0",
     "dva-loading": "^1.0.4",
     "enquire-js": "^0.1.1",
